--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: python
 python:
   - "3.8"
 
-services: -docker
+services:
+  - docker
 
 before_install:
+  - docker build -t nikitaproks/django-test -f ./api/Dockerfile ./api
 
 script:
-  - docker-compose run api sh -c "python manage.py test && flake8"
+  - docker run -e CI=true nikitaproks/django-test python manage.py test && flake8
