--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
   - docker
 
 before_install:
+  - pip install -r requirements.txt
   - docker build -t nikitaproks/django-test -f ./api/Dockerfile ./api
 
 script:
