--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before_install:
-  - pip install -r requirements.txt
+  - pip install -r ./api/requirements.txt
   - docker build -t nikitaproks/django-test -f ./api/Dockerfile ./api
 
 script:
