--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ services:
   - docker
 
 before_install:
-  - pip install docker-compose
-  - docker build -t nikitaproks/django-test -f ./api/Dockerfile ./api
+  - docker-compose build
 
 script:
   - docker-compose run api sh -c "python manage.py test && flake8"
