--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.7-alpine
 ENV PYTHONUNBUFFERED 1
 WORKDIR "/app"
-COPY ./requirements.txt ./
+COPY ./requirements.txt /requirements.txt
 RUN pip install -r requirements.txt
 COPY . .
 
