--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,10 +1,9 @@
 FROM python:3.7-alpine
 ENV PYTHONUNBUFFERED 1
-WORKDIR "/app"
-COPY ./requirements.txt .
+WORKDIR /app/api
+COPY requirements.txt ./
 RUN pip install -r requirements.txt
-COPY . .
+COPY . ./
 
 RUN adduser -D user
 USER user
-CMD [ "python", "manage.py", "runserver", "0.0.0.0:8000" ]
