--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,9 @@ version: "3"
 
 services:
   api:
+    command: python manage.py runserver 0.0.0.0:8000
     build:
       context: ./api
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
-    volumes:
-      - ./api:/app
-    #command: >
-    #  sh -c "python manage.py runserver 0.0.0.0:8000"
