--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ services:
 before_install:
   - docker-compose build
 script:
-  - docker-compose run api "python manage.py test && flake8"
+  - docker-compose run api python manage.py test && flake8
