updated admin to support custom user model

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.7-alpine
 ENV PYTHONUNBUFFERED 1
-WORKDIR /app/api
+WORKDIR /app
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
-COPY . ./
+COPY . .
 
 RUN adduser -D user
 USER user
