configured postrgres db

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ services:
 
 before_install:
   - pip install docker-compose
+  - docker-compose build
 script:
   - docker-compose run api sh -c "python manage.py test && flake8"
