--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,9 +4,9 @@ WORKDIR /app
 
 COPY requirements.txt ./
 
-RUN apk add --update --no-cache postgresql-client
+RUN apk add --update --no-cache postgresql-client jpeg-dev
 RUN apk add --update --no-cache --virtual .tmp-build-deps \
-    gcc libc-dev linux-headers postgresql-dev
+    gcc libc-dev linux-headers postgresql-dev musl-dev zlib zlib-dev
 
 RUN pip install -r requirements.txt
 
@@ -14,5 +14,9 @@ RUN apk del .tmp-build-deps
 
 COPY . .
 
+RUN mkdir -p /vol/web/media
+RUN mkdir -p /vol/web/static
 RUN adduser -D user
+RUN chown -R user:user /vol/
+RUN chmod -R 755 /vol/web
 USER user
